# Autonomous-Driving

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .yamllint.yaml  CPPLINT.cfg  LICENSE  README.md  persist.json  setup.cfg
.github/: dependabot.yaml
.github/workflows/: semantic-pull-request.yaml
flir_spinnaker_ros2/launch/: blackfly_s.launch.py
gscam/examples/: v4l.launch.xml
gscam/src/: gscam.cpp
microstrain_inertial/microstrain_inertial_driver/config/: empty.yml
microstrain_inertial/microstrain_inertial_driver/launch/: microstrain_launch.py
microstrain_inertial/microstrain_inertial_examples/scripts/: listener.py
microstrain_inertial/microstrain_inertial_examples/src/: listener.cpp
novatel_gps/novatel_gps_driver/launch/: tester_for_eth.launch.py  tester_for_usb.launch (copy_v1).py  tester_for_usb.launch (copy_v2_dynamic_transf_launch_param ).py  tester_for_usb.launch.py
ouster-ros/ouster-ros/config/: community_driver_config (copy).yaml  community_driver_config.yaml  (+1 more)
pointcloud_preprocessor_h/: CMakeLists.txt  package.xml
pointcloud_preprocessor_h/launch/: crop_box_filter_h.launch.py  distortion_h.launch.py  glog_component_launch.py  polygon_remover.launch.py  ring_outlier_h.launch.py
pvd_vehicle/pvd_msgs/: CMakeLists.txt  package.xml
pvd_vehicle/pvd_msgs/launch/: vehicle_bridge.launch.xml
pvd_vehicle/pvd_msgs/msg/: PVDdata.msg
pvd_vehicle/vehicle_bridge/: CMakeLists (copy_v1.0).txt  CMakeLists.txt  package (copy_pr3_5xx).xml  package (copy_v1.0).xml  package.xml
ros2_socketcan/ros2_socketcan/: CMakeLists.txt  package (copy_v1.0).xml  package.xml
ros2_socketcan/ros2_socketcan/include/ros2_socketcan/: socket_can_receiver_node (copy_240722).hpp  socket_can_receiver_node (copy_v1.0).hpp  socket_can_receiver_node.hpp  socket_can_sender_node (copy 230320).hpp  socket_can_sender_node (copy_v1.0).hpp  socket_can_sender_node.hpp
ros2_socketcan/ros2_socketcan/launch/: socket_can_bridge.launch (copy_v1).xml  socket_can_bridge.launch (copy_v2).xml  socket_can_bridge.launch.xml  socket_can_receiver.launch.py  socket_can_sender.launch.py
ros2_socketcan/ros2_socketcan/src/: socket_can_receiver_node (copy_240722).cpp  socket_can_receiver_node (copy_pr3_5xx).cpp  socket_can_receiver_node (copy_v1.0).cpp  socket_can_receiver_node.cpp  socket_can_sender_node copy2.cpp  socket_can_sender_node.cpp  twistController2EPS2ACC_node (copy_pr3_5xx).cpp  twistController2EPS2ACC_node (copy_use_actuation)_.cpp  twistController2EPS2ACC_node (copy_v1.0).cpp  twistController2EPS2ACC_node.cpp  twistController2vcu_node (copy).cpp  twistController2vcu_node (copy_pr3_5xx).cpp  twistController2vcu_node (copy_v1.0.cpp  twistController2vcu_node.cpp
udp_image_receiver/: CMakeLists.txt  package.xml
udp_image_receiver/src/: udp_image_receiver.cpp
v4l2_camera/: CMakeLists.txt
v4l2_camera/launch/: camera.launch (copy_bgr8).py  camera.launch.py
v4l2_camera/src/: parameters (copy_org_yuyv).cpp  parameters.cpp  v4l2_camera (copy_bgr8).cpp  v4l2_camera.cpp  v4l2_camera_device.cpp
(+246 files in other folders)
