<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udp_image_receiver</name>
  <version>0.1.0</version>
  <description>ROS 2 package for UDP image receiver</description>

  <maintainer email="hwanhong57@chungbuk.ac.kr">Your Name</maintainer>
 
  <license>HWANHONG</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>boost_system</exec_depend> <!-- Boost.Asio 라이브러리 의존성 추가 & HH_231108--> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
