<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_socketcan</name>
  <version>1.2.0</version>
  <description>Simple wrapper around SocketCAN</description>
  <maintainer email="whitleysoftwareservices@gmail.com">Josh Whitley</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>can_msgs</depend>
  <depend>ros2_socketcan_msgs</depend>
  <depend>autoware_auto_geometry_msgs</depend> <!-- HH_230308 -->
  <depend>autoware_auto_vehicle_msgs</depend> <!-- HH_230308 -->
  <depend>autoware_auto_planning_msgs</depend> <!-- HH_230308 -->
  <depend>autoware_auto_control_msgs</depend> <!-- HH_230323 -->
  <depend>tier4_vehicle_msgs</depend> <!-- HH_230328 -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
